Rename template pure -> light

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-pure",
+  "name": "cra-template-light",
   "version": "1.0.0",
   "description": "A lightweight template for Create React App",
   "author": "Peter R. Stuhlmann",
